# ELoad_UniProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ElectronicLoad.map  Makefile  README.md  build.sh  clean.sh  clean_cmake.sh  cmake_install.cmake
FreeRTOS/Source/include/: FreeRTOS.h.rej  FreeRTOSConfig.h
Inc/: .adc.h.swp  .gpio.h.kate-swp  clock_tree.h  display.h  el_sem.h  hitachi_lcd.h  init.h  interrupts.h  proj_tasks.h  shared.h  st7066u_lcd.h  task_control.h  task_dac.h  task_events.h  task_lcd.h  task_ui.h  ui_state.h
Inc/Hardware/: adc.h  clock_tree.h  dac.h  gpio.h  st7066u_lcd.h
Inc/Tasks/: pi.h  task_control.h  task_lcd.h
Src/: adc.c  clock_tree.c  dac.c  display.c  el_sem.c  gpio.c  hitachi_lcd.c  init.c  interrupts.c  main.c  proj_tasks.c  st7066u_lcd.c  syscalls.c  task_control.c  task_dac.c  task_events.c  task_lcd.c  task_ui.c  ui_state.c
Src/Hardware/: .adc.c.swm  .adc.c.swn  .adc.c.swo  .adc.c.swp  adc.c  clock_tree.c  dac.c  display.c  gpio.c  init.c  interrupts.c  st7066u_lcd.c
Src/Tasks/: .task_control.c.swp  pi.c  task_control.c  task_lcd.c  task_ui.c
Startup/: startup_stm32g071xx.s
tests/: CMakeLists.txt  test_task_ui.c  tests
